event creation removed console log, fixed inputs gap

--- a/src/stylings/search-form.scss
+++ b/src/stylings/search-form.scss
@@ -21,6 +21,7 @@
 .search-inputs-container{
     @include flex-container(space-between,center,20px);
     flex-flow: wrap;
+    gap: 20px;
 }
 
 .search-input-focused, .search-input:hover{
